--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -69,7 +69,7 @@ body.dark-mode .portfolio-filter .btn {
 /* ---- */
 body.dark-mode #hero {
     width: 100%;
-    height: 100vh;
+    height: 70vh;
     background: url("../img/bg-img/hero-bg-dark.png") top right no-repeat;
     background-size: cover;
     position: relative;
@@ -78,8 +78,8 @@ body.dark-mode #hero {
 
 body.dark-mode #hero:before {
     content: "";
-    background: #000000c6;
-    backdrop-filter: blur(2px);
+    /* background: #000000c6;
+    backdrop-filter: blur(15px); */
     position: absolute;
     bottom: 0;
     top: 0;
