--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -20,7 +20,6 @@ body.dark-mode {
 }
 
 body.dark-mode {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     background: #18191a;
     min-height: 100vh;
     padding: 0;
@@ -122,8 +121,6 @@ body.dark-mode #scrollUp {
     transform: translateY(-2px);
 }
 
-
-
 body.dark-mode header {
     position: fixed;
     top: 0;
@@ -139,7 +136,6 @@ body.dark-mode header {
     backdrop-filter: blur(5px);
     transition: all 0.5s ease;
 }
-
 
 body.dark-mode .nav-item {
     position: relative;
@@ -452,6 +448,11 @@ body.dark-mode li.breadcrumb-item a {
     color: #fff;
 }
 
+body.dark-mode .bg-overlay-section::after {
+    background-color: #080808d2;
+    backdrop-filter: blur(15px);
+}
+
 /* ------------------------------------------ */
 
 /* ------------------------------------------ xx.x Timeline ------------------------------------------ */
@@ -629,10 +630,10 @@ body.dark-mode .scrollable-tabs-container a.active {
 
 
 
-/* ==================== ADVANCED NAVIGATION BAR ==================== */
+/* ==================== Navigation Bar ==================== */
 
 body.dark-mode .navbar {
-    background: #07070793;
+    background: #000000a9;
     backdrop-filter: blur(25px);
     border: 1px solid #0c0c0c60;
     border-radius: 50px;
@@ -668,7 +669,7 @@ body.dark-mode .mobile-menu-overlay.active {
 }
 
 body.dark-mode .mobile-menu.active {
-    transform: translateY(0);
+    transform: translateY(10px);
 }
 
 body.dark-mode .hamburger span {
@@ -678,6 +679,18 @@ body.dark-mode .hamburger span {
 body.dark-mode .mobile-toggle:hover {
     background: #e6e6e61a;
 }
+
+body.dark-mode .mobile-menu-header {
+    border-bottom: 1px solid rgba(199, 199, 199, 0.233);
+}
+
+body.dark-mode .mobile-menu-link {
+    color: #fff;
+}
+
+
+
+/* ==================== FOOTER ==================== */
 
 body.dark-mode .footer {
     background: #2c2c2c8c;
