--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -68,7 +68,7 @@ body.dark-mode .portfolio-filter .btn {
 /* ---- */
 body.dark-mode #hero {
     width: 100%;
-    height: 70vh;
+    height: 100vh;
     background: url("../img/bg-img/hero-bg-dark.png") top right no-repeat;
     background-size: cover;
     position: relative;
@@ -470,6 +470,12 @@ body.dark-mode .timeline-item:hover {
 body.dark-mode .portfolio-sort label {
     font-size: 16px;
     font-weight: bold;
+    color: #fff;
+}
+
+body.dark-mode #sort-options {
+    background-color: #000;
+    border: 1px solid #000;
     color: #fff;
 }
 
