--- a/css/style.css
+++ b/css/style.css
@@ -1556,11 +1556,13 @@ li.breadcrumb-item.active a {
 }
 
 .pw-portfolio-area .container-fluid {
-    padding-right: 5%;
-    padding-left: 5%;
+    padding-right: 25px;
+    padding-left: 25px;
+    max-width: 90em;
+    margin-right: auto;
+    margin-left: auto;
     background-color: #ececea;
 }
-
 .pw-projects-menu {
     position: relative;
     z-index: 1;
@@ -2718,7 +2720,6 @@ h2.page-title {
 
 h1.page-title {
     font-weight: bolder;
-    padding-right: 6em;
 }
 
 h1.page-title-single {
@@ -2849,6 +2850,7 @@ md-menu {
     display: block;
     width: 100%;
     padding: .375rem .75rem;
+    margin-top: 5px;
     font-size: 1rem;
     font-weight: 400;
     line-height: 1.5;
@@ -2933,7 +2935,7 @@ md-menu {
 .scrollable-tabs-container ul {
     display: flex;
     gap: 16px;
-    padding: 12px 20px;
+    padding: 12px 12px;
     margin: 0;
     list-style: none;
     overflow-x: scroll;
