--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -28,40 +28,19 @@ body.dark-mode {
 }
 
 /* ---- Button */
-.wbnrfz_btn_theme {
-    position: relative;
-    z-index: 1;
-    min-width: auto;
-    height: 46px;
-    line-height: 42px;
-    font-size: 14px;
-    font-weight: 500;
-    display: inline-block;
-    padding: 0 30px;
-    /* margin-left: 28px; */
-    text-align: center;
-    text-transform: capitalize;
-    background-color: #8c8e75;
-    color: #fff;
-    border-radius: 60px;
-    transition-duration: 500ms;
-    margin-bottom: 0px;
-    margin-top: 0px;
-    border: none;
-}
-
-body.dark-mode .wbnrfz_btn_theme:hover {
-    background-color: #8c8e75;
-    transform: translateY(-2px);
-}
 
 body.dark-mode .wbnrfz_btn_theme {
-    background-color: #7eafda;
+    background-color: #4784c5;
     color: #fff;
 }
 
 body.dark-mode .portfolio-filter .btn {
     color: #fff;
+}
+
+body.dark-mode .wbnrfz_btn_theme:hover {
+    background-color: #4784c5;
+    transform: translateY(-2px);
 }
 
 
@@ -669,12 +648,32 @@ body.dark-mode .nav-link {
     color: #fff;
 }
 
+body.dark-mode .nav-link-toggle {
+    color: #fff;
+    background: #007093;
+    background: linear-gradient(90deg, rgba(0, 112, 147, 1) 0%, rgba(45, 147, 172, 1) 100%);
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
+    border: none;
+}
+
+body.dark-mode.nav-link-toggle:hover {
+    color: #fff !important;
+    transform: translateY(-2px);
+    background-color: #4784c5;
+    box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
+}
+
+body.dark-mode .navbar-nav .nav-link-toggle:focus {
+    color: #fff;
+}
+
+
 body.dark-mode .mobile-menu {
     background: #0e0e0e;
 }
 
 body.dark-mode .mobile-menu-overlay {
-    background: rgba(0, 0, 0, 0.8);
+    background: #000000ef;
 
 }
 
