--- a/css/style.css
+++ b/css/style.css
@@ -55,7 +55,7 @@ body {
 
 body {
     font-family: "Onest", sans-serif;
-    background: #e9eae5;
+    background: #ececea;
     min-height: 100vh;
     padding: 0;
     margin: 0;
@@ -159,8 +159,8 @@ ul li {
 }
 
 .container-xxl {
-    padding-right: 25px;
-    padding-left: 25px;
+    padding-right: 50px;
+    padding-left: 50px;
     max-width: 90em;
     margin-right: auto;
     margin-left: auto;
@@ -428,7 +428,7 @@ input:required {
 .follow-area.clearfix {
     padding-top: 80px;
     padding-bottom: 80px;
-    background-color: #e9eae5;
+    background-color: #ececea;
 }
 
 /* ------------------------------------------ */
@@ -2264,7 +2264,7 @@ hr {
 
 .ftco-section-blog {
     padding: 7em 0;
-    background-color: #f6f7f2;
+    background-color: #ececea;
 }
 
 .mt-5 {
@@ -2955,7 +2955,7 @@ md-menu {
 .scrollable-tabs-container ul {
     display: flex;
     gap: 16px;
-    padding: 12px 12px;
+    padding: 12px 30px;
     margin: 0;
     list-style: none;
     overflow-x: scroll;
