XXXX-XX Feature Update for Version Next (6.0.0)

--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -615,7 +615,7 @@ body.dark-mode .scrollable-tabs-container svg {
 }
 
 body.dark-mode .scrollable-tabs-container a.active {
-    background: linear-gradient(90deg, #de650f 0%, #fd1d1d 50%, #df9e43 100%);
+background: linear-gradient(180deg,rgba(223, 76, 58, 1) 0%, rgba(220, 147, 25, 1) 100%);
     color: #fff;
 }
 
