XXXX-XX Feature Update for Version Next (6.0.0)

--- a/css/style-breakpoints.css
+++ b/css/style-breakpoints.css
@@ -1024,6 +1024,12 @@
         right: -43px;
     }
 
+    #cv-about, #cv-img {
+        background-image: url("img/bg-img/hero-bg-small.png");
+        height: 45vh;
+
+    }
+
 }
 
 /* ---- */
