--- a/css/style.css
+++ b/css/style.css
@@ -2678,24 +2678,6 @@ li.breadcrumb-item.active a:hover {
     margin-bottom: 20px;
 }
 
-.breadcrumb-area-eicw-cover {
-    position: relative;
-    z-index: 1;
-    height: 50vh;
-}
-
-.breadcrumb-area-eicw-backCover {
-    position: relative;
-    z-index: 1;
-    height: 100vh;
-}
-
-
-.breadcrumb-area-eicw-subs {
-    position: relative;
-    z-index: 1;
-    height: 40vh;
-}
 
 h2.page-title {
     color: #000;
@@ -2731,7 +2713,7 @@ h2.page-title {
 }
 
 .page-header-section {
-    padding-top: 4em;
+    padding-top: 2em;
     background: #ececea;
 }
 
@@ -2746,6 +2728,12 @@ h1.page-title-single {
 
 li.breadcrumb-item a {
     color: #000;
+}
+
+#cv-about {
+    background-image: url("img/bg-img/hero-bg-small.png");
+    height: 72vh;
+
 }
 
 /* ------------------------------------------ */
@@ -2855,7 +2843,6 @@ li.breadcrumb-item a {
 md-menu {
     z-index: 9999 !important;
 }
-
 
 
 
