--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -312,6 +312,16 @@ body.dark-mode .about-me-summary:hover {
     background-color: #52718d;
 }
 
+body.dark-mode .port-summary {
+    background-color: #2e2e2e;
+    color: #fff;
+    transition: all 0.5s ease;
+}
+
+body.dark-mode .port-summary:hover {
+    background-color: #4784c5;
+}
+
 body.dark-mode .about-me-area {
     background-color: #1e1e1e !important;
     transition: all 0.5s ease;
@@ -323,25 +333,15 @@ body.dark-mode .timeline-content {
 }
 
 body.dark-mode .timeline-content:hover {
-    background-color: #52718d;
+    background-color: #4784c5;
 }
 
 /* ------------------------------------------ */
 
 /* ------------------------------------------ 3.0 Indiv Pages ------------------------------------------ */
-/* body.dark-mode .wbnrfz-summ {
-    background-color: #181818cb;
-    transition: all 0.5s ease;
-    padding-top: 8em;
-    padding-bottom: 10px;
-    backdrop-filter: blur(10px);
-} */
-
 body.dark-mode span,
-body.dark-mode .collapse .details_catagory_wrap .single_catagory h4,
-body.dark-mode .collapse .details_catagory_wrap .single_catagory .social_links a,
-body.dark-mode .collapsing .details_catagory_wrap .single_catagory h4,
-body.dark-mode .collapsing .details_catagory_wrap .single_catagory .social_links a {
+body.dark-mode h4,
+body.dark-mode .social_links a {
     color: #fff;
 }
 
@@ -593,6 +593,11 @@ body.dark-mode .scrollable-tabs-container a {
     box-shadow: rgba(0, 0, 0, 0.11) 1px 2px 3px 1px;
 }
 
+body.dark-mode .scrollable-tabs-container a:hover {
+    background-color: #4784c5;
+    color: #fff;
+}
+
 body.dark-mode .scrollable-tabs-container .right-arrow {
     right: 0;
     background: linear-gradient(to left, #18191a 50%, transparent);
@@ -615,7 +620,7 @@ body.dark-mode .scrollable-tabs-container svg {
 }
 
 body.dark-mode .scrollable-tabs-container a.active {
-background: linear-gradient(180deg,rgba(223, 76, 58, 1) 0%, rgba(220, 147, 25, 1) 100%);
+    background: linear-gradient(180deg, rgba(223, 76, 58, 1) 0%, rgba(220, 147, 25, 1) 100%);
     color: #fff;
 }
 
