--- a/css/style.css
+++ b/css/style.css
@@ -823,8 +823,8 @@ header {
 
 #hero:before {
     content: "";
-    /* background: #97979780;
-    backdrop-filter: blur(15px);  */
+    background: #dfdfdf80;
+    /* backdrop-filter: blur(15px); */
     position: absolute;
     bottom: 0;
     top: 0;
@@ -2697,6 +2697,10 @@ select:focus {
     scroll-margin-top: 10vh;
 }
 
+#featured {
+    scroll-margin-top: 5vh;
+}
+
 /* ------------------------------------------ 21.0 EICW ------------------------------------------ */
 .wbnrfz-summ-micro {
     background-color: #f5f6f2;
@@ -3801,4 +3805,37 @@ html.glightbox-open {
     .carousel a {
         width: 100%;
     }
+}
+
+
+
+.bouncing-arrow-container {
+    position: absolute;
+    left: 50%;
+    bottom: 32px;
+    transform: translateX(-50%);
+    z-index: 10;
+    text-align: center;
+}
+
+.bouncing-arrow-link {
+    color: #444;
+    font-size: 2.5rem;
+    text-decoration: none;
+    transition: color 0.2s;
+}
+
+.bouncing-arrow-link:hover,
+.bouncing-arrow-link:focus {
+    color: #4784c5;
+}
+
+.bouncing-arrow {
+    animation: bounce 3.0s infinite;
+}
+
+@keyframes bounce {
+    0%, 20%, 50%, 80%, 100% { transform: translateY(0); }
+    40% { transform: translateY(-10px); }
+    60% { transform: translateY(-5px); }
 }
