--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -56,7 +56,7 @@ body.dark-mode #hero {
 
 body.dark-mode #hero:before {
     content: "";
-    background-color: #00000050;
+    /* background-color: #00000050; */
     /* backdrop-filter: blur(15px); */
     position: absolute;
     bottom: 0;
