--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -677,6 +677,10 @@ body.dark-mode .nav-link:hover {
     box-shadow: 0 8px 20px rgba(0, 0, 0, 0.15);
 }
 
+body.dark-mode .nav-link-toggle:hover {
+    color: #fff !important;
+}
+
 body.dark-mode .nav-link:hover span {
     color: #fff;
     transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
@@ -769,18 +773,34 @@ body.dark-mode .footer-copy {
 
 
 
-
-/* body.dark-mode .bouncing-arrow-link {
-    color: #bebebe;
-    font-size: 2.5rem;
-    text-decoration: none;
-    transition: color 0.2s;
+/* Screenshots Draggable Carousel */
+body.dark-mode .flickity-prev-next-button {
+    position: absolute;
+    top: 50%;
+    width: 44px;
+    height: 44px;
+    border: none;
+    border-radius: 50%;
+    background: #494949 !important;
+    cursor: pointer;
+    transform: translateY(0%) !important;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1) !important;
+    transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94) !important;
 }
 
-body.dark-mode .bouncing-arrow-link:hover {
-    color: #4784c5;
+body.dark-mode .flickity-prev-next-button:hover {
+    transform: translateY(-2px) !important;
+    background-color: #80a8cc !important;
 }
 
-body.dark-mode .bouncing-arrow {
-    animation: bounce 3.0s infinite;
-} */
+body.dark-mode .flickity-prev-next-button svg {
+    position: absolute;
+    left: 20%;
+    top: 20%;
+    width: 60%;
+    height: 60%;
+}
+
+body.dark-mode .flickity-prev-next-button .arrow {
+    fill: #fff;
+}
