--- a/css/style.css
+++ b/css/style.css
@@ -571,7 +571,7 @@ input:required {
     z-index: 1;
     min-width: 160px;
     height: 46px;
-    line-height: 42px;
+    line-height: 46px;
     font-size: 14px;
     font-weight: 500;
     display: inline-block;
@@ -1605,7 +1605,8 @@ li.breadcrumb-item.active a {
     width: 80px;
     height: 56px;
     border-radius: 25px;
-    background-color: #7b7c64;
+    background-color: #adada6;
+    box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.3), 0 4px 12px rgba(0, 0, 0, 0.1);
     text-align: center;
     line-height: 56px;
     font-size: 30px;
@@ -3727,7 +3728,7 @@ md-menu {
 
 
 
-/* ss */
+/* Screenshots Draggable Carousel */
 .carousel {
     background: none;
     margin: 0 auto;
@@ -3759,8 +3760,6 @@ md-menu {
     pointer-events: none;
     user-select: none;
 }
-
-
 
 .flickity-prev-next-button {
     position: absolute;
