--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -445,8 +445,8 @@ body.dark-mode li.breadcrumb-item a {
 }
 
 body.dark-mode .bg-overlay-section::after {
-    background-color: #080808d2;
-    backdrop-filter: blur(15px);
+    /* background-color: #080808d2;
+    backdrop-filter: blur(15px); */
 }
 
 /* ------------------------------------------ */
