--- a/css/style.css
+++ b/css/style.css
@@ -141,8 +141,8 @@ ul li {
     top: 0;
     left: 0;
     z-index: -1;
-    background-color: #ddddddd3;
-    backdrop-filter: blur(15px);
+    /* background-color: #e9e9e9cc; */
+    /* backdrop-filter: blur(2px); */
 }
 
 .row {
@@ -2443,7 +2443,7 @@ li.breadcrumb-item a {
 .breadcrumb-area-eicw-subs {
     position: relative;
     z-index: 1;
-    height: 40vh;
+    height: 65vh;
 }
 
 h2.page-title {
