--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -420,6 +420,9 @@ body.dark-mode .banner-eicw img {
     border-radius: 20px;
     margin-bottom: 2em;
     margin-top: 2em;
+    border: 1px solid #2b2b2b33;
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(61, 61, 61, 0.384);
+    transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
 }
 
 body.dark-mode h2.page-title {
