--- a/css/style.css
+++ b/css/style.css
@@ -2751,6 +2751,8 @@ li.breadcrumb-item.active a:hover {
     border-radius: 20px;
     margin-bottom: 2em;
     margin-top: 2em;
+    border: 1px solid rgba(255, 255, 255, 0.2);
+    box-shadow: 0 20px 40px rgba(0, 0, 0, 0.1), inset 0 1px 0 rgba(255, 255, 255, 0.2);
 }
 
 .banner {
